--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-google-maps": "^4.6.1",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
     "react-select": "^1.0.0-beta6",
