--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "autoprefixer-loader": "^2.1.0",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "browser-sync": "^2.10.0",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
     "css-loader": "^0.17.0",
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.0",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.0",
     "react-hot-loader": "^1.3.0",
