--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-dropzone": "^3.2.2",
     "react-google-maps": "^4.6.1",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc3",
