--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^1.0.0-rc3",
     "react-select": "^1.0.0-beta6",
     "redux": "^3.0.4",
-    "redux-form": "^3.1.0"
+    "redux-form": "^3.1.0",
+    "redux-thunk": "^1.0.0",
   }
 }
