--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "bluebird": "^3.0.6",
     "classnames": "^2.1.3",
     "immutable": "^3.7.5",
     "react": "^0.14.0",
