--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "webpack-dev-server --port 9010",
+    "build-css:dev": "node ./node_modules/gulp/bin/gulp.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Miro Nieminen <miro.nieminen@gmail.com>",
   "license": "TODO",
+  "engines": {
+    "node": "0.12.9"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^2.1.0",
     "babel-core": "^5.8.23",
