--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^3.0.6",
     "classnames": "^2.1.3",
     "immutable": "^3.7.5",
+    "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
