--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "author": "Miro Nieminen <miro.nieminen@gmail.com>",
   "license": "TODO",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miro/kadkad-mgmt"
+  },
   "engines": {
-    "node": "0.12.9"
+    "node": "5.3.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.1.0",
@@ -42,7 +46,7 @@
     "react-dropzone": "^3.2.2",
     "react-google-maps": "^4.6.1",
     "react-redux": "^3.1.0",
-    "react-router": "^1.0.0-rc3",
+    "react-router": "1.0.3",
     "react-select": "^1.0.0-beta6",
     "redux": "^3.0.4",
     "redux-form": "^3.1.0",
