--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "immutable": "^3.7.5",
     "jsonwebtoken": "^5.5.0",
     "moment": "^2.10.6",
+    "purecss-sass": "^0.6.0",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
