--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai-immutable": "^1.3.0",
     "css-loader": "^0.17.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.0",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.0",
