--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
     "css-loader": "^0.17.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.0",
