--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-css:dev": "node ./node_modules/gulp/bin/gulp.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "build": "webpack --config webpack-production.config.js --progress --profile --colors"
+    "build": "webpack --config webpack-production.config.js --progress --profile --colors -p"
   },
   "author": "Miro Nieminen <miro.nieminen@gmail.com>",
   "license": "GPL-3.0",
