--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --port 9010 --config webpack-dev.config.js --progress --profile --colors",
+    "start:dev": "webpack-dev-server --port 9010 --config webpack-dev.config.js --colors",
     "build-css:dev": "node ./node_modules/gulp/bin/gulp.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
