--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-select": "^1.0.0-beta6",
     "redux": "^3.0.4",
     "redux-form": "^4.1.0",
+    "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.0",
     "superagent": "1.6.1"
   }
