--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node deployment-server",
+    "postinstall": "npm run build && gulp productionBuild",
     "start:dev": "webpack-dev-server --port 9010 --config webpack-dev.config.js --colors",
     "build-css:dev": "node ./node_modules/gulp/bin/gulp.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
@@ -31,6 +33,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.0",
+    "gulp-sequence": "^0.4.4",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.0",
     "react-hot-loader": "^1.3.0",
@@ -41,6 +44,7 @@
   "dependencies": {
     "bluebird": "^3.0.6",
     "classnames": "^2.1.3",
+    "express": "^4.13.3",
     "immutable": "^3.7.5",
     "jsonwebtoken": "^5.5.0",
     "purecss-sass": "^0.6.0",
