--- a/package.json
+++ b/package.json
@@ -21,38 +21,35 @@
   "engines": {
     "node": "5.3.0"
   },
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer-loader": "^2.1.0",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "bluebird": "^3.0.6",
     "browser-sync": "^2.10.0",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
+    "classnames": "^2.1.3",
     "css-loader": "^0.17.0",
     "del": "^2.2.0",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.0",
     "gulp-sequence": "^0.4.4",
-    "jsdom": "^6.5.1",
-    "mocha": "^2.3.0",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
-  },
-  "dependencies": {
-    "bluebird": "^3.0.6",
-    "classnames": "^2.1.3",
-    "express": "^4.13.3",
+    "history": "^1.17.0",
     "immutable": "^3.7.5",
+    "jsdom": "^6.5.1",
     "jsonwebtoken": "^5.5.0",
+    "mocha": "^2.3.0",
+    "odometer": "^0.4.7",
     "purecss-sass": "^0.6.0",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-dropzone": "^3.2.2",
     "react-google-maps": "^4.6.1",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^3.1.0",
     "react-router": "1.0.3",
     "react-select": "^1.0.0-beta6",
@@ -60,6 +57,9 @@
     "redux-form": "^4.1.0",
     "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.0",
-    "superagent": "1.6.1"
+    "style-loader": "^0.12.3",
+    "superagent": "1.6.1",
+    "webpack": "^1.12.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
