--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux-thunk": "^1.0.0",
     "style-loader": "^0.12.3",
     "superagent": "1.6.1",
+    "viewports": "^0.6.4",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   }
