--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
     "classnames": "^2.1.3",
+    "compression": "^1.6.1",
     "css-loader": "^0.17.0",
     "del": "^2.2.0",
     "express": "^4.13.3",
