--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^3.1.0",
     "react-router": "1.0.3",
     "react-select": "^1.0.0-beta6",
+    "react-slick": "^0.9.3",
     "redux": "^3.0.4",
     "redux-form": "^4.1.0",
     "redux-simple-router": "^1.0.2",
